// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button core component 04 - renders correctly with size="small" 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#334FFA",
      "borderRadius": 10,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Avenir",
        },
        [
          {
            "color": "#fff",
            "fontSize": 16,
            "textAlign": "center",
          },
          {
            "fontSize": 12,
          },
        ],
        {
          "fontWeight": "bold",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button core component 05 - renders correctly with size="medium" 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#334FFA",
      "borderRadius": 10,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Avenir",
        },
        [
          {
            "color": "#fff",
            "fontSize": 16,
            "textAlign": "center",
          },
          {
            "fontSize": 16,
          },
        ],
        {
          "fontWeight": "bold",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;
